new on boarding text as a replacement for alert dialogs, login onboarding using a view pager

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,250 +4,15 @@
 
 
 
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
-    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
-    android:background="@color/roots_green"
-    android:descendantFocusability="beforeDescendants"
-    android:focusableInTouchMode="true">
-
-    <LinearLayout
-        android:id="@+id/ll1"
+    <com.team.roots.NonSwipeableViewPager
+        android:id="@+id/login_container"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="1.25"
-        android:gravity="center_vertical|center_horizontal">
-
-        <!--<TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Roots"
-            android:id="@+id/textView2"
-            android:textSize="30dp"
-            android:textColor="#ffffffff" />-->
-        <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/roots_in_circ"/>
-
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center_vertical|center_horizontal">
-
-
-
-                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
-                    android:layout_height="wrap_content" android:orientation="vertical">
-                    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleHorizontal"
-                        android:layout_width="match_parent" android:layout_height="wrap_content" android:visibility="invisible"
-
-                        />
-                    <EditText android:id="@+id/loginedittext" android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:hint="@string/prompt_id"
-                        android:imeActionLabel="@string/action_sign_in"
-                        android:imeOptions="actionUnspecified" android:inputType="text"
-                        android:maxLines="1" android:singleLine="true"
-                        android:layout_marginBottom="10dp"
-                        android:textColorHint="#ffffffff"
-                        android:textColor="#ffffffff" />
-
-                    <EditText android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:hint="@string/prompt_username"
-                        android:imeActionLabel="@string/action_sign_in"
-                        android:imeOptions="actionUnspecified" android:inputType="text"
-                        android:maxLines="1" android:singleLine="true"
-                        android:layout_marginBottom="10dp"
-                        android:textColorHint="#ffffffff"
-                        android:textColor="#ffffffff" />
-
-                    <EditText android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
-                        android:layout_height="wrap_content" android:hint="@string/prompt_password"
-                        android:imeActionLabel="@string/action_sign_in"
-                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
-                        android:maxLines="1" android:singleLine="true"
-                        android:layout_marginBottom="10dp"
-                        android:textColorHint="#ffffffff"
-                        android:textColor="#ffffffff" />
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="10dp">
-
-                        <Button android:id="@+id/school_select" style="?android:textAppearanceSmall"
-                            android:layout_width="match_parent" android:layout_height="20dp"
-                            android:text="Select a School"
-                            android:textStyle="bold"
-                            android:textColor="#ffffffff"
-                            android:background="@color/roots_green_darker" />
-
-
-
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp">
-
-                        <Button android:id="@+id/loginbutton" style="?android:textAppearanceSmall"
-                            android:layout_width="match_parent" android:layout_height="wrap_content"
-                            android:text="@string/action_sign_in"
-                            android:textStyle="bold"
-                            android:textColor="#ffffffff"
-                            android:background="@color/roots_green_darker" />
-
-
-
-                    </RelativeLayout>
-                </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1.5"
-        android:gravity="bottom|center_horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="This text to be replaced."
-            android:id="@+id/counselorlogin"
-            android:textColor="#ffffffff" />
-    </LinearLayout>
-</LinearLayout>
+        />
 
 
 
 
 
 
-
-
-
-
-
-
-
-<!--<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="fill_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.layer.quick_start_android"
-    android:background="#FFFFFF"
-    >-->
-
-
-<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="fill_parent"
-android:background="@color/roots_green"
-    android:id="@+id/root_main_activity_layout"
-android:paddingBottom="@dimen/activity_vertical_margin"
-android:paddingLeft="@dimen/activity_horizontal_margin"
-android:paddingRight="@dimen/activity_horizontal_margin"
-android:paddingTop="10dp"
-tools:context="com.layer.quick_start_android">
-
-    <EditText
-        android:id="@+id/loginedittext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Type in Your ID"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
-
-    <EditText
-        android:id="@+id/counselor_login_edittext_username"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Type in Your Username"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
-
-    <EditText
-        android:id="@+id/counselor_login_edittext_password"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:hint="Type in Your Password"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:password="true"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/counselor_login_edittext_username"
-        android:layout_marginTop="3dp"/>
-
-    <Button
-        android:id="@+id/loginbutton"
-        android:layout_width="wrap_content"
-        android:paddingRight="20dp"
-        android:paddingLeft="20dp"
-        android:paddingBottom="5dp"
-        android:paddingTop="5dp"
-        android:textSize="20sp"
-        android:background="@color/roots_green"
-        android:shadowColor="#ffaaaaaa"
-
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/loginedittext"
-        android:text="Login"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/counselorlogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Counselor Login"
-        android:textColor="@color/tappable_blue"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <ImageView
-        android:id="@+id/login_cr_logo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:background="@drawable/ic_launcher"
-        android:layout_marginBottom="51dp"
-        android:layout_above="@+id/loginedittext"
-        android:layout_alignLeft="@+id/loginbutton"
-        android:layout_alignStart="@+id/loginbutton" />
-
-    <TextView
-        android:id="@+id/counselor_login_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Counselor Login"
-        android:textSize="30sp"
-        android:fontFamily="@string/common_google_play_services_enable_button"
-        android:layout_marginBottom="70dp"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@+id/counselor_login_edittext_username"/>
-
-
-</RelativeLayout>
--->
