--- a/app/src/main/res/layout/activity_messages_view.xml
+++ b/app/src/main/res/layout/activity_messages_view.xml
@@ -1,13 +1,13 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xmls="http://schemas.android.com/apk/res-auto"
     android:id="@+id/view_messages_drawer_layout"
-    android:layout_height="match_parent"
-    android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
@@ -15,24 +15,88 @@
             android:orientation="vertical">
 
 
+            <LinearLayout
+                android:id="@+id/counselorbiobar"
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:background="@color/counselor_bar"
 
+                android:orientation="horizontal"
+                android:padding="10dp">
 
-
-                <!--<RelativeLayout xmls:android="http://schemas.android.com/apk/res/android"
-                    android:layout_height="match_parent"
-                    android:layout_width="match_parent">-->
-
-                <TextView
-                    android:id="@+id/counselor_unavailible_warning"
-                    android:visibility="gone"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="This counselor is offline. Don't expect an immediate response!"
-                    android:background="#ffffb0b2"
-                    android:textColor="#ffff0709"
-                    android:textSize="@dimen/atlas_text_size_general"
+                    android:layout_gravity="center"
                     android:gravity="center"
-                    android:padding="5dp" />
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/counselorbioimage"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/atlas_shape_circle_gray"
+                        android:scaleType="centerCrop" />
+
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="@string/call"
+                        android:id="@+id/call_text_view"
+                        android:textColor="#000"
+                        android:textSize="16sp" />
+
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/bioinformationtitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp"
+                        android:singleLine="true"
+                        android:text="Tomaz Stolfa"
+
+                        android:textSize="@dimen/atlas_text_size_title" />
+
+                    <ScrollView
+                        android:id="@+id/scrollView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="5dp">
+
+                        <TextView
+                            android:id="@+id/bioinformation"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+
+                            android:text="You did it! When are we going to see the..."
+                            android:textSize="@dimen/atlas_text_size_smaller" />
+                    </ScrollView>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/counselor_unavailible_warning"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#ffffb0b2"
+                android:gravity="center"
+                android:padding="5dp"
+                android:text="This counselor is offline. Don't expect an immediate response!"
+                android:textColor="#ffff0709"
+                android:textSize="@dimen/atlas_text_size_general"
+                android:visibility="gone" />
 
             <FrameLayout
                 android:layout_width="match_parent"
@@ -42,132 +106,31 @@
                 <com.layer.atlas.AtlasMessagesList
                     android:id="@+id/messageslist"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
-
-
+                    android:layout_height="match_parent" />
 
 
                 <com.layer.atlas.AtlasParticipantPicker
                     android:id="@+id/participantpicker"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent" />
 
             </FrameLayout>
+
             <com.layer.atlas.AtlasTypingIndicator
                 android:id="@+id/typingindicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"/>
+                android:layout_margin="5dp" />
 
             <com.layer.atlas.AtlasMessageComposer
                 android:id="@+id/textinput"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
     </FrameLayout>
 
-
-    <!-- nav drawer containing all counselor info-->
-    <FrameLayout
-        android:id="@+id/counselor_bio_drawer"
-        android:layout_width="240dp"
-        android:layout_height="match_parent"
-        android:layout_gravity="end">
-        <LinearLayout
-            android:id="@+id/counselorbiobar"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="10dp"
-
-            android:orientation="vertical"
-            android:background="@color/counselor_bar">
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:layout_gravity="center">
-
-                <ImageView
-                    android:id="@+id/counselorbioimage"
-                    android:layout_width="80dp"
-                    android:layout_height="80dp"
-                    android:layout_margin="10dp"
-                    android:scaleType="centerCrop"
-                    android:background="@drawable/atlas_shape_circle_gray" />
-                <ImageView
-                    android:layout_height="80dp"
-                    android:layout_width="80dp"
-                    android:layout_margin="10dp"
-                    android:id="@+id/phoneicon"
-                    android:src="@drawable/phoneicon"
-                    />
-
-
-
-
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/bioinformationtitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:textSize="@dimen/atlas_text_size_title"
-                android:text="Tomaz Stolfa"
-                android:layout_gravity="center"
-                android:layout_margin="10dp"/>
-            <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:id="@+id/scrollView">
-
-                <TextView
-                    android:id="@+id/bioinformation"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="You did it! When are we going to see the..."
-                    android:textSize="@dimen/atlas_text_size_smaller" />
-            </ScrollView>
-
-            <!--<RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingRight="10dp"
-                android:paddingLeft="20dp"
-                android:id="@+id/bioinformationview">
-
-
-                <TextView
-                    android:id="@+id/bioinformationtitle"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:singleLine="true"
-                    android:textSize="@dimen/atlas_text_size_general"
-                    android:text="Tomaz Stolfa" />
-
-
-                <ScrollView
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:scrollbars="none"
-                    android:layout_below="@+id/bioinformationtitle"
-                    android:id="@+id/scrollView">
-
-                    <TextView
-                        android:id="@+id/bioinformation"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="You did it! When are we going to see the..."
-                        android:textSize="@dimen/atlas_text_size_smaller" />
-                </ScrollView>
-            </RelativeLayout>-->
-        </LinearLayout>
-    </FrameLayout>
 
 </android.support.v4.widget.DrawerLayout>
 
