--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="roots_green_lighter">#ff93efa2</color>
     <color name="roots_green">#ff26df45</color>
+
     <color name="roots_green_darker">#ff209632</color>
     <color name="counselor_bar">#ddeeeeee</color>
     <color name="text_counselor_bar">#dd9b9ca0</color>
