cursors don't show for login Edit Texts

--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -65,7 +65,8 @@
                 android:gravity="center"
                 android:textSize="30sp"
                 android:textColorHint="#ffffffff"
-                android:textColor="#ffffffff" />
+                android:textColor="#ffffffff"
+                android:cursorVisible="false"/>
 
            <EditText  android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_username"
@@ -78,7 +79,8 @@
                 android:gravity="center"
                 android:textSize="30sp"
                 android:textColorHint="#ffffffff"
-                android:textColor="#ffffffff" />
+                android:textColor="#ffffffff"
+               android:cursorVisible="false"/>
 
             <EditText android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_password"
@@ -92,6 +94,7 @@
                 android:textSize="30sp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                 android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
+                android:cursorVisible="false"
                 />
 
 
