login UI changes, keyboard input changes, and onboarding changes

--- a/app/src/main/res/layout/get_started.xml
+++ b/app/src/main/res/layout/get_started.xml
@@ -27,7 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            style="?android:textAppearanceLarge"
+            style="?android:textAppearanceMedium"
             android:textColor="#ffffffff"
             android:text="@string/get_started_description"/>
 
