--- a/app/src/main/res/layout/account_type.xml
+++ b/app/src/main/res/layout/account_type.xml
@@ -25,7 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            style="?android:textAppearanceLarge"
+            style="?android:textAppearanceMedium"
             android:textColor="#ffffffff"
             android:text="@string/student_or_counselor"/>
 
