small spacer view on vertical drawer

--- a/app/src/main/res/layout/activity_messages_view.xml
+++ b/app/src/main/res/layout/activity_messages_view.xml
@@ -73,8 +73,20 @@
                 xmlns:slidingLayer="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/slidingLayer1"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
+                android:layout_height="wrap_content"
                 android:layout_alignParentTop="true">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <View android:background="@color/material_blue_grey_800"
+                        android:id="@+id/spacer"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:visibility="invisible">
+
+                    </View>
 
                 <LinearLayout
                     android:id="@+id/counselorbiobar"
@@ -145,6 +157,11 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
+
+
+                </LinearLayout>
+
 
             </com.wunderlist.slidinglayer.SlidingLayer>
 
