--- a/app/src/main/res/layout/activity_messages_view.xml
+++ b/app/src/main/res/layout/activity_messages_view.xml
@@ -80,11 +80,10 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
 
-                    <View android:background="@color/material_blue_grey_800"
+                    <View android:background="@color/counselor_bar"
                         android:id="@+id/spacer"
                         android:layout_width="match_parent"
-                        android:layout_height="40dp"
-                        android:visibility="invisible">
+                        android:layout_height="40dp">
 
                     </View>
 
