--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="roots_green">#ff26df45</color>
 
     <color name="roots_green_darker">#ff209632</color>
-    <color name="counselor_bar">#ddeeeeee</color>
+    <color name="counselor_bar">#eeeeee</color>
     <color name="text_counselor_bar">#dd9b9ca0</color>
     <color name="tappable_blue">#ff0028ea</color>
     <color name="friendly_warning_red">#ffffb0b2</color>
