layout updates complete

--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -54,43 +54,43 @@
                 android:layout_width="match_parent" android:layout_height="wrap_content" android:visibility="invisible"
 
                 />
-            <EditText android:id="@+id/loginedittext" android:layout_width="match_parent"
+            <com.team.roots.MyClearEditText android:id="@+id/loginedittext" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_id"
                 android:imeOptions="actionGo"
                 android:maxLines="1" android:singleLine="true"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                 android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
                 android:inputType="phone"
-                android:gravity="center"
                 android:textSize="30sp"
                 android:textColorHint="#ffffffff"
                 android:textColor="#ffffffff"
+                android:gravity="center"
                 android:cursorVisible="false"/>
 
-           <EditText  android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
+           <com.team.roots.MyClearEditText  android:id="@+id/counselor_login_edittext_username" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_email"
                 android:imeOptions="actionNext" android:inputType="text"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                 android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
                 android:maxLines="1" android:singleLine="true"
                 android:layout_marginBottom="10dp"
-                android:gravity="center"
                 android:textSize="30sp"
                 android:textColorHint="#ffffffff"
                 android:textColor="#ffffffff"
+               android:gravity="center"
                android:cursorVisible="true"/>
 
-            <EditText android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
+            <com.team.roots.MyClearEditText android:id="@+id/counselor_login_edittext_password" android:layout_width="match_parent"
                 android:layout_height="wrap_content" android:hint="@string/prompt_password"
                 android:imeOptions="actionGo" android:inputType="textPassword"
                 android:maxLines="1" android:singleLine="true"
                 android:layout_marginBottom="10dp"
                 android:textColorHint="#ffffffff"
                 android:textColor="#ffffffff"
-                android:gravity="center"
                 android:textSize="30sp"
                 android:layout_marginLeft="@dimen/activity_horizontal_margin_triple"
                 android:layout_marginRight="@dimen/activity_horizontal_margin_triple"
+                android:gravity="center"
                 android:cursorVisible="true"
                 />
 
