--- a/app/src/main/res/layout/get_started.xml
+++ b/app/src/main/res/layout/get_started.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
-    android:background="@color/roots_green"
+    android:background="@color/white"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
     <LinearLayout
@@ -19,16 +19,16 @@
 
 
         <ImageView
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:src="@drawable/roots_in_circ"/>
+            android:layout_width="91dp"
+            android:layout_height="149dp"
+            android:src="@drawable/rootslogo"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             style="?android:textAppearanceMedium"
-            android:textColor="#ffffffff"
+            android:textColor="@color/roots_gray"
             android:text="@string/get_started_description"/>
 
     </LinearLayout>
@@ -43,8 +43,9 @@
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:text="@string/get_started"
             android:textStyle="bold"
-            android:textColor="#ffffffff"
-            android:background="@color/roots_green_darker" />
+
+            android:textColor="@color/white"
+            android:background="@color/roots_green" />
 
 
 
