--- a/app/src/main/res/layout/school_selection.xml
+++ b/app/src/main/res/layout/school_selection.xml
@@ -5,7 +5,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
-    android:background="@color/roots_green"
+    android:background="@color/white"
     android:descendantFocusability="beforeDescendants"
     android:focusableInTouchMode="true">
     <LinearLayout
@@ -18,15 +18,15 @@
 
         <ImageView
             android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:src="@drawable/roots_in_circ"/>
+            android:layout_height="123dp"
+            android:src="@drawable/ic_launcher"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
             style="?android:textAppearanceMedium"
-            android:textColor="#ffffffff"
+            android:textColor="#000000"
             android:text="@string/school_choice_description"/>
 
     </LinearLayout>
@@ -65,7 +65,7 @@
             android:text="@string/next"
             android:textStyle="bold"
             android:textColor="#ffffffff"
-            android:background="@color/roots_green_lighter" />
+            android:background="@color/roots_green_unselected" />
 
 
 
@@ -76,7 +76,7 @@
         android:text="@string/back"
         android:id="@+id/back_school_selection"
         android:layout_marginTop="20dp"
-        android:textColor="#ffffffff" />
+        android:textColor="@color/roots_gray" />
 
 
 
