--- a/app/src/main/res/layout/school_selection.xml
+++ b/app/src/main/res/layout/school_selection.xml
@@ -18,15 +18,14 @@
 
         <ImageView
             android:layout_width="75dp"
-            android:layout_height="123dp"
-            android:src="@drawable/ic_launcher"/>
+            android:layout_height="75dp"
+            android:src="@drawable/ic_launcherweb"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            style="?android:textAppearanceMedium"
-            android:textColor="#000000"
+            style="@style/descriptionFont"
             android:text="@string/school_choice_description"/>
 
     </LinearLayout>
@@ -37,7 +36,7 @@
         android:layout_width="20dp"
         android:layout_height="0dp"
         android:indeterminate="true"
-        android:layout_weight="2.5"
+        android:layout_weight="2"
         android:visibility="visible"/>
 
     <!--Will be set to VISIBLE after schools load-->
@@ -45,38 +44,35 @@
         android:layout_height="0dp"
         android:id="@+id/list_view_schools"
         android:layout_width="match_parent"
-        android:layout_weight="2.5"
-        android:visibility="gone"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/no_school"
-        android:id="@+id/counselorlogin"
-        android:layout_marginTop="20dp"
-        android:textColor="#ffffffff" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
+        android:layout_weight="2"
+        android:visibility="gone"
+        android:paddingBottom="20dp"/>
+    <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/no_school"-->
+        <!--android:id="@+id/counselorlogin"-->
+        <!--android:layout_marginTop="20dp"-->
+        <!--android:textColor="#ffffffff" />-->
 
 
-        <Button android:id="@+id/schoolselectionnext" style="?android:textAppearanceSmall"
+
+        <Button android:id="@+id/schoolselectionnext" style="@style/navButton"
             android:layout_width="match_parent" android:layout_height="wrap_content"
             android:text="@string/next"
-            android:textStyle="bold"
-            android:textColor="#ffffffff"
-            android:background="@color/roots_green_unselected" />
+            android:layout_marginTop="20dp"
+             />
 
 
 
-    </RelativeLayout>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/back"
         android:id="@+id/back_school_selection"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/roots_gray" />
+        style="@style/lightdescriptionFont"
+        android:layout_marginTop="20dp"/>
 
 
 
