--- a/app/src/main/res/layout/loading_screen.xml
+++ b/app/src/main/res/layout/loading_screen.xml
@@ -8,8 +8,8 @@
 
     <ImageView
         android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/rootslogo"
+        android:layout_height="200dp"
+        android:src="@drawable/ic_launcherweb"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"/>
 
